<resources>
    <string name="app_name">MA-CED</string>
    <string name="title_activity_burger_menu">Monatsübersicht</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hannes Mertes</string>
    <string name="nav_header_subtitle">hannes.mertes@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_onboarding_site1">Einstellungen</string>
    <string name="title_activity_monatuebersicht">Monatsübersicht</string>
    <string name="title_activity_schmerzdokumentation">Schmerzdokumentation</string>
    <string name="title_activity_pdfexportieren">pdf exportieren</string>
    <string name="title_activity_symptomhinzufuegen">Symptom hinzufügen</string>
    <string name="title_activity_symptomedokumentation">Symptom dokumentieren</string>

    <string name="google_maps_API_key">AIzaSyBxSe7MlqXbsZo7KyO3nUK3trXTNh6zDs</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_toilet_finder">Map</string>
    <string name="sicherheit">Sicherheit</string>
    <string name="Schutzmechanismus">Schutzmechanismus</string>
    <string name="Pin_Passwort">Pin / Passwort ändern</string>
    <string name="App_Schutz">App_Schutz</string>
    <string name="Is_App_Schutz">0</string>
    <string name="Pin_String">Pin</string>
    <string name="Passwort_String">Passwort</string>

    <string name="schwach">schwach</string>
    <string name="keine">keine</string>
    <string name="mittel">mittel</string>
    <string name="stark">stark</string>
    <string name="sehr_stark">sehr stark</string>
    <string name="Lokalisation">Lokalisation</string>
    <string name="schmerzskala">Schmerzskala</string>
    <string name="art_des_schmerzes">Art des Schmerzes</string>
    <string name="zeitpunkt_des_schmerzauftritts">Zeitpunkt des Schmerzauftritts</string>
    <string name="schmerzzeitraum">Schmerzzeitraum</string>
    <string name="nahrungsaufnahme_vor_dem_schmerzeintritts">Nahrungsaufnahme vor dem Schmerzeintritts</string>
    <string name="ok">OK</string>
    <string name="nahrung">Nahrung</string>
    <string name="symptom">Symptom</string>
    <string name="symptomhinzufuegen">neues Symptom hinzufügen</string>
    <string name="zeitpunktAuftritt">Zeitpunkt des Auftritts</string>
    <string name="zeitraum">Zeitraum</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="neuesSymptom">neues Symptom</string>
    <string name="hinzufuegen">hinzufügen</string>
    <string name="hinweisPDF">Hier können Sie die Schmerzskala exportieren</string>
    <string name="letzteWoche">letzte Woche</string>
    <string name="letzterMonat">letzten Monat</string>
    <string name="eigenerZeitraum">eigener Zeitraum</string>
    <string name="von">von:</string>
    <string name="bis">bis:</string>
    <string name="exportieren">exportieren</string>
    <string name="anmelden">anmelden</string>

    <string-array name="lokalisationen">
        <item>oben rechts</item>
        <item>oben mittig</item>
        <item>oben links</item>
        <item>mittig</item>
        <item>unten rechts</item>
        <item>unten links</item>
    </string-array>

    <string-array name="schmerzart">
        <item>stechend</item>
        <item>dumpf</item>
        <item>bohrend</item>
        <item>krampfartig</item>
        <item>eher diffus</item>
    </string-array>

    <string-array name="zeitraum">
        <item>kurz</item>
        <item>1-2Stunden</item>
        <item>>2 Stunden</item>
        <item>ganztägig</item>
    </string-array>

    <string-array name="symptome">
        <item>Gelenkschmerzen</item>
        <item>Rückenschmerzen</item>
        <item>Augenentzündung</item>
        <item>Müdigkeit</item>
        <item>Hautreizung</item>
        <item>Fieber</item>
        <item>Appetitlosigkeit</item>
        <item>Gewichtsverlust</item>
        <item>Aphthe</item>
    </string-array>
    <string name="title_activity_toiletfinder2">Map</string>


</resources>
