<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PDFexportieren">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/hinweisPDF"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="30dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioButton2"
        android:layout_alignStart="@+id/textView24"
        android:layout_marginBottom="-104dp"
        android:text="@string/letzteWoche"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="83dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView24"
        android:layout_marginTop="131dp"
        android:text="@string/letzterMonat"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="147dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView24"
        android:layout_marginTop="196dp"
        android:text="@string/eigenerZeitraum"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="209dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="60dp"
        android:layout_height="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView26"
        android:layout_marginBottom="227dp"
        android:text="@string/von"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="265dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="181dp"
        android:layout_marginStart="76dp"
        android:text="@string/bis"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="314dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="#AA1A1A"
        android:text="@string/exportieren"
        android:textColor="#FFF"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="446dp" />

</RelativeLayout>