<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edittext"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchmerzDokumentation">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        android:text="@string/schmerzskala"
         />

    <SeekBar
        android:id="@+id/seekBar1"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:max="4"
        android:progress="2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/seekBar1"
        android:text="@string/keine"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar1"
        android:layout_marginStart="98dp"
        android:text="@string/schwach"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar1"
        android:layout_centerHorizontal="true"
        android:text="@string/mittel"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/seekBar1"
        android:layout_marginEnd="99dp"
        android:text="@string/stark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/seekBar1"
        android:layout_alignTop="@+id/textView10"
        android:text="@string/sehr_stark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="96dp"
        android:text="@string/Lokalisation"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerLokalisation"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView15"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginStart="138dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="157dp"
        android:text="@string/art_des_schmerzes"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerArt"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="220dp"
        android:text="@string/zeitpunkt_des_schmerzauftritts"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/schmerztime"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/textView9"
        android:layout_centerVertical="true"
        android:inputType="" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginBottom="207dp"
        android:text="@string/schmerzzeitraum"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerZeitraum"
        android:layout_width="333dp"
        android:layout_height="34dp"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView19"
        android:layout_marginTop="-207dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginBottom="136dp"
        android:text="@string/nahrungsaufnahme_vor_dem_schmerzeintritts"
        android:textSize="15sp" />



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@android:string/ok"
        android:background="#AA1A1A"
        android:textColor="#FFF"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginBottom="73dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nahrung" />
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>