<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymptomHinzufuegen">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        android:text="@string/beschreibung" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/neuesSymptom" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:background="#AA1A1A"
        android:textColor="#FFF"
        android:text="@string/hinzufuegen" />

</RelativeLayout>