<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymptomeDokumentation">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        android:text="@string/symptom" />

    <Spinner
        android:id="@+id/spinnerSymptom"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/textView21"
        android:layout_below="@+id/textView21"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView21"
        android:layout_marginTop="106dp"
        android:text="@string/zeitpunktAuftritt"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/symptomtime"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView21"
        android:layout_below="@+id/textView22"
        android:inputType="" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView21"
        android:layout_marginTop="193dp"
        android:text="@string/zeitraum"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerSyZeitraum"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_below="@+id/textView23"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="#AA1A1A"
        android:onClick="onClickButtonWeiter"
        android:text="@string/ok"
        android:textColor="#FFF" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="334dp"
        android:layout_height="143dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        app:srcCompat="@mipmap/ic_logo_camera_red" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="48dp"
        android:layout_height="38dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-107dp"
        android:onClick="onClickButtonCamera"
        app:srcCompat="@mipmap/ic_logo_camera_black" />


</RelativeLayout>